--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,7 @@
   --spacing-md: 1.5rem; /* 24px; spacing on medium and expanded devices >=37.5rem */
 
   /* Material theme shadows */
+  --shadow-elevation-1: 0 1px 2px rgb(0 0 0 / 0.3), 0 1px 3px 1px rgb(0 0 0 / 0.15);
   --shadow-elevation-3: 0 4px 8px 3px rgb(0 0 0 / 0.15), 0 1px 3px rgb(0 0 0 / 0.3);
   --shadow-elevation-4: 0 6px 10px 4px rgb(0 0 0 / 0.15), 0 2px 3px rgb(0 0 0 / 0.3);
 
